--- a/src/client/client.html
+++ b/src/client/client.html
@@ -1,6 +1,14 @@
 <script src="client.js"></script>
+<script src="../util/Packet.js"></script>
 
+<!--
 <div id="chatlog"></div>
-
 <input type="text" id="message"></input>
 <input type="button" value="send" onclick="sendMessage()">
+-->
+
+<div id="map" style="position: relative; border: 2px solid hotpink; height: 600px; width: 600px;">
+	<!--<div id="player" style="width: 20px; height: 20px; background-color: green; border-radius: 10px; position: absolute;
+			top: 300; left: 300;"
+		onclick="moveLeft()"></div>-->
+</div>
