--- a/src/client/client.html
+++ b/src/client/client.html
@@ -7,6 +7,9 @@
 <input type="button" value="send" onclick="sendMessage()">
 -->
 
+<input type="text" id="portNumber"></input>
+<input type="button" value="connect" onclick="changePort()">
+
 <div id="map" style="position: relative; border: 2px solid hotpink; height: 600px; width: 600px;">
 	<!--<div id="player" style="width: 20px; height: 20px; background-color: green; border-radius: 10px; position: absolute;
 			top: 300; left: 300;"
