--- a/src/client/client.html
+++ b/src/client/client.html
@@ -1,5 +1,5 @@
 <script src="client.js"></script>
-<script src="../util/Packet.js"></script>
+<script src="Packet.js"></script>
 
 <!--
 <div id="chatlog"></div>
