--- a/src/client/client.html
+++ b/src/client/client.html
@@ -1,11 +1,12 @@
 <script src="client.js"></script>
 <script src="Packet.js"></script>
-
 <!--
 <div id="chatlog"></div>
 <input type="text" id="message"></input>
 <input type="button" value="send" onclick="sendMessage()">
 -->
+<html>
+<body>
 
 <input type="text" id="portNumber"></input>
 <input type="button" value="connect" onclick="changePort()">
@@ -15,3 +16,8 @@
 			top: 300; left: 300;"
 		onclick="moveLeft()"></div>-->
 </div>
+
+<script>init()</script>
+
+</body>
+</html>
