--- a/src/client/client.html
+++ b/src/client/client.html
@@ -6,10 +6,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css"/>
   </head>
   <body id="body">
-    <form onsubmit="server.connect()">
-      <input type="text" id="ip"></input>
-      <input type="submit" value="connect">
-    </form>
+    
+    <input type="text" id="ip"></input>
+    <input type="button" value="connect" onclick="server.connect()">
 
     <div id="map"></div>
     <script>setup.init()</script>
