centered on player

--- a/src/client/client.html
+++ b/src/client/client.html
@@ -6,9 +6,8 @@
     <link rel="stylesheet" type="text/css" href="styles.css"/>
   </head>
   <body id="body">
-    
-    <input type="text" id="ip"></input>
-    <input type="button" value="connect" onclick="server.connect()">
+ 	<div id="leftBorder"></div>
+ 	<div id="rightBorder"></div>
 
     <div id="map"></div>
     <script>setup.init()</script>
