--- a/src/client/client.html
+++ b/src/client/client.html
@@ -9,8 +9,16 @@
  	<div id="leftBorder"></div>
  	<div id="rightBorder"></div>
 
+ 	<table id="score">
+	 	<td id="score0">0</td>
+	 	<td id="time">0</td>
+	 	<td id="score1">0</td>
+ 	</table>
+
     <div id="map"></div>
     <script>setup.init()</script>
+
+    <script>document.getElementById("score0").innerHtml = 5</script>
 
   </body>
 </html>
