--- a/src/client/client.html
+++ b/src/client/client.html
@@ -1,3 +1,5 @@
+<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+
 <script src="client.js"></script>
 <script src="Packet.js"></script>
 
