--- a/src/client/client.html
+++ b/src/client/client.html
@@ -13,14 +13,18 @@
 
  	<table id="score">
 	 	<td id="score0">0</td>
-	 	<td id="time">0</td>
+	 	<td id="time">0:00</td>
 	 	<td id="score1">0</td>
  	</table>
 
-    <div id="map"></div>
-    <script>setup.init()</script>
+  <div id="map"></div>
 
-    <script>document.getElementById("score0").innerHtml = 5</script>
+  <div id="chatBox">
+    <p id="chat">chat</p>
+    <input id="input"></input>
+  </div>
+
+  <script>setup.init()</script>
 
   </body>
 </html>
